# Transliteration

./: .gitignore  .testr.conf  .travis.yml  AUTHORS  ChangeLog  Dockerfile  MANIFEST.in  Makefile  README.md  backup_setup.py  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  make.bat
libindic/transliteration/: __init__.py  cmudict.py  cmumapping.py  core.py  indic_en.py
libindic/transliteration/templates/: libindic.transliteration.html  transliteration.html
libindic/transliteration/tests/: test_transliteration.py
src/transliteration/: cmudict.0.7a_SPHINX_40  indic_en.py  transliterate.py
tests/: IPAtests.py  transliterationtest.py
transliteration/: __init__.py  cmudict.0.7a_LexStress  cmudict.py  cmumapping.py  core.py  indic_en.py  ipa_map.py  langdetect.py  transliterate.py
transliteration/templates/: transliteration.html
