[metadata]
name = libindic-transliteration
author = Santhosh Thottingal
author-email = santhosh.thottingal@gmail.com
summary = Indian Language Transliteration Library
license = LGPL 3.0
description-file =
  README.md
home-page = http://silpa.org.in/Transliterate
requires-python = >=2.7
classifier =
  Development Status :: 5 - Production/Stable
  License :: DFSG approved
  License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
  Operating System :: OS Independent
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  Programming Language :: Python

[files]
namespace_packages = libindic
packages = libindic

[wheel]
universal=1
    

